# wikiKG

./: .env.example  .gitignore  DESIGN.md  NOTES.md  README.md  REQUIREMENTS.md  TASKS.md  coverage_report.html  docker-compose.yml  working_video.webm
backend/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: routes.py  schemas.py
backend/app/core/: config.py  interfaces.py  logging.py
backend/app/ingestion/: article_fetcher.py  chunker.py  graph.py
backend/app/rag/: graph.py  prompt_builder.py  retriever.py  summariser.py
backend/tests/: conftest.py
backend/tests/integration/: test_ingest_and_chat.py
backend/tests/unit/: test_article_fetcher.py  test_chunker.py  test_prompt_builder.py  test_rag_graph.py  test_retriever.py  test_routes_errors.py  test_schemas.py  test_summariser.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js
frontend/src/components/: ChatBox.jsx  SummaryPanel.jsx  UrlForm.jsx
