[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.pytest.ini_options]
asyncio_mode   = "auto"
testpaths      = ["tests"]
python_files   = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts        = "--cov=app --cov-report=term-missing --cov-report=html:../htmlcov --cov-fail-under=85"

[tool.coverage.run]
source = ["app"]
omit   = [
    "app/main.py",          # entrypoint — excluded per NFR-9 assumption A6
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
